# Ironweaver

./: .gitignore  AGENTS.md  Cargo.toml  README.md  embedding_utils.py  instructions.md  lgf_parser.py  pyproject.toml
docs/: LGF.md  basics.md  callbacks.md  filtering.md  traversal.md
examples/: example_graph.json  example_usage.ipynb  lgf_examples.ipynb
ironweaver/: Cargo.toml  __init__.py  demo_graph_construction.py  example_expand.py  example_expand_method.py  example_graph_construction.py  example_vertex_bfs.py  pyproject.toml
observed_dict_rs/: Cargo.toml  demo_graph_construction.py  pyproject.toml  test_expand.py  test_expand_method.py  test_graph_construction.py  test_vertex_bfs.py
observed_dict_rs/src/: edge.rs  lib.rs  node.rs  path.rs  serialization.rs
observed_dict_rs/src/vertex/: algorithms.rs  analysis.rs  core.rs  manipulation.rs  mod.rs
observed_dict_rs/src/vertex/algorithms/: filter.rs  mod.rs  random_walks.rs
performance_results/: benchmark_parallel_bfs.py  bfs_cyclic_performance_results.csv  bfs_cyclic_performance_summary_stats.txt  bfs_graph_shape_comparison_results.csv  bfs_graph_shape_comparison_summary_stats.txt  bfs_performance_results.csv  bfs_performance_summary_stats.txt  bfs_search_performance_results.csv  bfs_search_performance_summary_stats.txt  branching_graph_performance_results.csv  branching_graph_performance_summary_stats.txt  cycle_detection_performance_results.csv  cyclic_graph_performance_results.csv  cyclic_graph_performance_summary_stats.txt  deep_graph_depth_limit_results.csv  depth_limited_traversal_results.csv  depth_limited_traversal_summary_stats.txt  dfs_performance_results.csv  dfs_performance_summary_stats.txt  large_linear_graph_results.csv  linear_graph_scalability_results.csv  linear_graph_scalability_summary_stats.txt  memory_intensive_graph_results.csv  memory_intensive_graph_summary_stats.txt  parallel_bfs_benchmark.py  structure_comparison_results.csv  structure_comparison_summary_stats.txt  wide_branching_graph_results.csv
src/: edge.rs  lib.rs  node.rs  (+1 more)
(+52 files in other folders)
