[package]
name = "ironweaver"
version = "0.1.0"
edition = "2021"

[lib]
name = "_ironweaver"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.25", features = ["extension-module"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bincode = "1.3"
chrono = { version = "0.4", features = ["serde"] }
half = { version = "2.2", features = ["serde"] }
rand = "0.8"
