[package]
name = "observed_dict_rs"          # <-- same spelling
version = "0.1.0"
edition = "2021"

[lib]
name = "observed_dict_rs"          # <-- same spelling
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.24", features = ["extension-module"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bincode = "1.3"
chrono = { version = "0.4", features = ["serde"] }
